Added a new class for robots

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,7 @@ endif ()
 
 add_library(${PROJECT_NAME} 
     src/dqrobotics/interfaces/webots/DQ_WebotsInterface.cpp
+    src/dqrobotics/interfaces/webots/DQ_WebotsRobot.cpp
 )
 
 target_include_directories(${PROJECT_NAME} PRIVATE
