Added new class. Modified the cmake file to enable installations.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,6 +74,57 @@ if(WIN32)
 endif()
 
 
+SET_TARGET_PROPERTIES(${PROJECT_NAME}
+    PROPERTIES PUBLIC_HEADER
+    "include/dqrobotics/interfaces/webots/DQ_WebotsInterface.h"
+    )
+
+INSTALL(TARGETS ${PROJECT_NAME}
+    LIBRARY DESTINATION "lib"
+    PUBLIC_HEADER DESTINATION "include/dqrobotics/interfaces/webots"
+    PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
+
+if(WIN32)
+INSTALL(TARGETS ${PROJECT_NAME}
+# https://stackoverflow.com/questions/21592361/cmake-install-is-not-installing-libraries-on-windows
+    RUNTIME DESTINATION "bin"
+    LIBRARY DESTINATION "lib"
+    ARCHIVE DESTINATION "lib"
+    PUBLIC_HEADER DESTINATION "include/dqrobotics"
+    PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
+endif()
+
+
+################################################################
+# INSTALL HEADERS IN SUBFOLDERS
+################################################################
+
+# Other Headers
+INSTALL(FILES
+    include/dqrobotics/interfaces/webots/DQ_WebotsRobot.h
+    DESTINATION "include/dqrobotics/interfaces/webots")
+
+# Robots
+INSTALL(FILES
+     include/dqrobotics/interfaces/webots/robots/URXWebotsRobot.h
+#    include/dqrobotics/interfaces/coppeliasim/robots/URXCoppeliaSimZMQRobot.h
+    DESTINATION "include/dqrobotics/interfaces/coppeliasim/robots")
+
+################################################################
+# INSTALL SOURCE FILES (So that the debugger can find them)
+################################################################
+
+# base folder
+INSTALL(FILES
+    src/dqrobotics/interfaces/webots/DQ_WebotsInterface.cpp
+    src/dqrobotics/interfaces/webots/DQ_WebotsRobot.cpp
+
+    DESTINATION "src/dqrobotics/interfaces/webots")
+
+# robots folder
+INSTALL(FILES
+        src/dqrobotics/interfaces/webots/robots/URXWebotsRobot.cpp
+    DESTINATION "src/dqrobotics/interfaces/webots/robots")
 
 #include_directories(include)
 
