Fixed missing Eigen linker

--- a/examples/ur3/CMakeLists.txt
+++ b/examples/ur3/CMakeLists.txt
@@ -31,6 +31,7 @@ add_executable(${PROJECT_NAME}
                ${PROJECT_NAME}.cpp)
 
 target_link_libraries(${PROJECT_NAME}
+    Eigen3::Eigen
     dqrobotics
     dqrobotics-interface-webots)
 
