Updated the Cmake file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,39 +28,11 @@ myproject_assure_out_of_source_builds()
 include(ProjectOptions.cmake)
 myproject_enable_ipo()
 
+include(cmake/Doxygen.cmake)
 
 
 find_package(Eigen3 REQUIRED)
 find_library(MATH_LIBRARY m REQUIRED)
-
-find_package(Doxygen QUIET)
-
-if (DOXYGEN_FOUND)
-    message(STATUS "Doxygen found!")
-    set(DOXYGEN_INPUT_DIRS
-        "${CMAKE_CURRENT_SOURCE_DIR}/include"
-        "${CMAKE_CURRENT_SOURCE_DIR}/src"
-    )
-
-    set(DOXYGEN_OUTPUT_DIR "${CMAKE_CURRENT_BINARY_DIR}/docs")
-
-    set(DOXYGEN_CONFIG_FILE "${CMAKE_CURRENT_BINARY_DIR}/Doxyfile")
-
-    configure_file(
-        ${CMAKE_CURRENT_SOURCE_DIR}/docs/Doxyfile.in
-        ${DOXYGEN_CONFIG_FILE}
-        @ONLY
-    )
-
-    add_custom_target(doc
-        COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYGEN_CONFIG_FILE}
-        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
-        COMMENT "Generating API documentation with Doxygen"
-        VERBATIM
-    )
-else()
-    message(STATUS "Doxygen not found. Documentation target will not be available.")
-endif()
 
 
 if (UNIX AND NOT APPLE)
